--- a/trang1to3.html
+++ b/trang1to3.html
@@ -147,7 +147,7 @@ h1{
         </p>
 
         <div class="image-box">
-            <img src="https://username.github.io/ten-repo/images/danh-gia-truong-thpt-nguyen-huu-canh.jpg"> alt="THPT Nguyễn Hữu Cảnh">
+            <img src="danh-gia-truong-thpt-nguyen-huu-canh-quang-binh-co-tot-khong__1_.jpg"> alt="THPT Nguyễn Hữu Cảnh">
     </div>
  <p> Nhắc đến những ngôi trường có chất lượng đào tạo tốt trên địa bàn tỉnh Quảng Bình, không thể bỏ qua trường cấp 3 Nguyễn Hữu Cảnh. Đây là một ngôi trường nhận được nhiều đánh giá cao từ các bậc phụ huynh. Cùng đi tìm hiểu về trường qua bài đánh giá trường THPT Nguyễn Hữu Cảnh có tốt không dưới đây nhé!.</p>
 
@@ -345,4 +345,5 @@ body{
 <div class="help">Trợ<br>giúp</div>
 
 </body>
+
 </html>
