--- a/trang1to3.html
+++ b/trang1to3.html
@@ -258,7 +258,7 @@ body{
 
 <body>
 <div class="image-container">
-    <img src="C:\Users\Admin\Downloads\danh-gia-truong-thpt-nguyen-huu-canh-quang-binh-co-tot-khong__1_.jpg" alt="Cổng trường THPT Nguyễn Hữu Cảnh">
+    <img src="truong-thpt-nguyen-huu-canh-quang-binh.jpg" alt="Cổng trường THPT Nguyễn Hữu Cảnh">
     <div class="image-caption">
         Cổng trường THPT Nguyễn Hữu Cảnh đẹp và khang trang
 
@@ -286,12 +286,12 @@ body{
          <p>Thư viện trường với hàng nghìn đầu sách là nơi các em có thể tìm thu thêm nguồn kiến thức mới. Bên cạnh đó, nhà trường cũng thường xuyên bổ sung cập nhật thêm sách mới hàng năm. </p>
          <p>Khuôn viên sân trường rộng rãi, sân trường được lát gạch sạch đẹp với nhiều cây xanh thoáng mát. Là nơi để các em vui chơi sau những giờ học căng thẳng cũng như để nhà trường tổ chức các buổi sinh hoạt chung, các buổi học ngoại khóa, các hoạt động thể thao, văn nghệ.</p>
          <div class="image-container">
-    <img src="C:\Users\Admin\Downloads\content_danh-gia-truong-thpt-nguyen-huu-canh-quang-binh-co-tot-khong__4_.jpg">
+    <img src="content_danh-gia-truong-thpt-nguyen-huu-canh-quang-binh-co-tot-khong__4_.jpg">
     <div class="image-caption">
         Dãy nhà khang trang, kiên cố trường cấp 3 Nguyễn Hữu Cảnh
          
          <div class="image-container">
-    <img src="C:\Users\Admin\Downloads\content_danh-gia-truong-thpt-nguyen-huu-canh-quang-binh-co-tot-khong__3_.jpg">
+    <img src="content_danh-gia-truong-thpt-nguyen-huu-canh-quang-binh-co-tot-khong__3_.jpg">
     <div class="image-caption">
         Một góc sân trường trường THPT Nguyễn Hữu Cảnh
 </div>
@@ -305,7 +305,7 @@ body{
         <p>Chất lượng học sinh nhờ vậy cũng ngày càng cải thiện, đặc biệt những năm gần đây tỷ lệ học sinh đậu tốt nghiệp THPT luôn đạt trên 99%; nhiều em đạt thành tích cao, đậu vào các trường đại học danh tiếng; trong kỳ thi học sinh giỏi các cấp, học sinh trường đạt được rất nhiều giải cao.</p>
         <p>Ngoài ra trường cũng thường xuyên tổ chức các cuộc thi văn nghệ, thể thao, các hoạt động ngoại khóa,.... để giúp các em học sinh phát triển bản thân toàn diện hơn.</p>
     <div class="image-container">
-    <img src="C:\Users\Admin\Downloads\584541932_1271586121679269_1052856542147326892_n.jpg">
+    <img src="584541932_1271586121679269_1052856542147326892_n.jpg">
     <div class="image-caption">
        Văn Nghệ 12E (2025-2026)
 </div>
@@ -347,3 +347,4 @@ body{
 </body>
 
 </html>
+
