--- a/trang2to3.html
+++ b/trang2to3.html
@@ -38,7 +38,7 @@ body {
 <header class="header">
   <div class="logo">
     <img class="photo"
-       src="C:\Users\Admin\Downloads\307319519_398430219126258_8114959008694303535_n.jpg"
+       src="307319519_398430219126258_8114959008694303535_n.jpg"
         style="width:220px; max-width:220px; height:auto; display:block; margin:auto;" 
 
 
@@ -85,7 +85,7 @@ Nhà trường là nơi chắp cánh ước mơ, đào tạo nhiều thế hệ 
 <p>Ngôi trường có hơn 600 học sinh trên toàn xã,luôn có sự kiện cho học sinh tham gia thi đua với nhau,tổ chức sự kiện tri ân học sinh,thầy cô giáo,và ủng hộ những bạn vượt khó</p>
 <div class="logo">
     <div class="image-box">
-    <img src="C:\Users\Admin\Downloads\586164186_1274085051429376_5225528751702000202_n.jpg"
+    <img src="586164186_1274085051429376_5225528751702000202_n.jpg"
          class="photo"
         style="width:300px; max-width:220px; height:auto; display:block; margin:auto;">
     </div>
@@ -125,3 +125,4 @@ Xin chúc cho chuỗi hoạt động năm học mới thành công tốt đẹp,
 
 </body>
 </html>
+
